[workspace]
members = [
    "agave/runtime",
    "agave/program-cache",
    "agave/svm",
    "agave/sysvar-cache",
    "agave/validator",
    "solana/compute-budget",
    "solana/runtime",
    "solana/svm",
]

resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
solana-sdk = { git = "https://github.com/anza-xyz/agave" }
