[package]
name = "agave-program-cache"
description = "Agave Program Cache"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
solana_rbpf = { workspace = true }
