[package]
name = "agave-runtime"
description = "Agave Validator Runtime Implementation"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
agave-program-cache = { path = "../program-cache" }
agave-svm = { path = "../svm" }
solana-runtime = { path = "../../solana/runtime" }
solana-sdk = { workspace = true }
solana-svm = { path = "../../solana/svm" }
