[package]
name = "agave-sysvar-cache"
description = "Agave Sysvar Cache"
documentation = "https://docs.rs/agave-svm"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
