[package]
name = "agave-validator"
description = "Agave Validator"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
agave-program-cache = { path = "../program-cache" }
agave-runtime = { path = "../runtime" }
agave-svm = { path = "../svm" }
solana-svm = { path = "../../solana/svm" }
solana-sdk = { workspace = true }
