[package]
name = "solana-compute-budget"
description = "Solana Compute Budget"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }

[features]
test-harness = []
