[package]
name = "solana-runtime"
description = "Solana Validator Runtime Specification"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
solana-svm = { path = "../svm" }

[features]
test-harness = []
